--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,18 @@
 width: 100%;
 height: 60vh;
 }
+
+.kgc-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vw;
+  background: rgba(2, 2, 2, 0.25);
+  justify-content: center;
+  z-index: 100;
+}
+
+.kgc-popup > div {
+  align-self: center;
+}
